logs/Slang/generated/hdlconv/hdlconvertor_p58.sv.log
name: hdlconvertor_p58
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p58.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p58.sv:1:1: error: language feature not yet supported
class Base #(parameter p = 1);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p58.sv:16:9: error: language feature not yet supported
typedef Base#(32) MyBaseT;
        ^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p58.sv:18:16: error: cannot use dot operator on a type
nettype MyBaseT::T narrowTsum with MyBaseT::Tsum;
        ~~~~~~~^ ~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p58.sv:16:19: note: declared here
typedef Base#(32) MyBaseT;
                  ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p58.sv:20:9: error: language feature not yet supported
typedef Base#(64) MyBaseType;
        ^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p58.sv:22:19: error: cannot use dot operator on a type
nettype MyBaseType::T wideTsum with MyBaseType::Tsum;
        ~~~~~~~~~~^ ~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p58.sv:20:19: note: declared here
typedef Base#(64) MyBaseType;
                  ^
